# building_ai_w_ai

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile.demo  Dockerfile.train  Makefile  ProjectLeadAsks.md  README.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  suggestion_overrides.md
.claude/: launch.json  zone-registry.yaml
.devcontainer/: Dockerfile  devcontainer.json
.githooks/: pre-commit
agents/: README.md
configs/: dqn_minipong.yaml  dqn_minipong_1m.yaml  dqn_minipong_full.yaml  dqn_mirror_1m.yaml  dqn_pong_smoke.yaml  dqn_selfplay_1m.yaml  dqn_selfplay_dual.yaml  dqn_selfplay_phase2.yaml  dqn_selfplay_symmetric.yaml  dqn_symmetric_1m.yaml  dqn_symq_1m.yaml  eval_minipong.yaml  ppo_selfplay_1m.yaml  random_pong.yaml
demo_pack/: README.md
docs/: CONVENTIONS.md  agents.md  code_quality_standards.md  compute.md  dark_factory.md  demo.md  dev_agents.md  factory_architecture.html  factory_validation_strategy.md  fork-validation-fastapi-pr15067.html  fork-validation-langchain-pr35788.html  generate_diff_data.py  milestones.md  plan_standalone_packages.md  pr10_diff_data.json  pr10_review_pack.html  pr12_diff_data.json  pr12_review_pack.html  pr15_diff_data.json  pr15_review_pack.html  pr17_diff_data.json  pr17_review_pack.html  pr26_diff_data.json  pr26_review_pack.html  pr34_diff_data.json  pr34_review_pack.html  pr36_review_pack_514497a0-3e1e11d3.html  pr6_diff_data.json  pr6_review_pack.html  pr9_diff_data.json  pr9_review_pack.html  pr_diff_data.json  pr_review_pack.html  rl_course.md  roadmap.md  suggestion_overrides.md  whitepapers.md
scenarios/: 01_env_determinism.md  02_env_observation_space.md  03_env_rewards.md  04_env_rendering.md  05_env_info_dict.md  06_training_artifacts.md  07_training_eval_videos.md  08_verify_learning_command.md  09_dashboard_loads.md  10_env_smoke_command.md  11_lint_typecheck_pass.md  12_full_cpu_pipeline.md  13_play_module_imports.md  14_play_makefile_targets.md  15_two_player_controls.md  16_agent_takeover_toggle.md  17_player_status_tags.md  18_continuous_play.md  19_agent_observation_flip.md  (+16 more)
(+165 files in other folders)
