[project]
name = "retro-rl-milestones"
version = "0.1.0"
description = "Recreate classic AI milestones with RL play-agents."
readme = "README.md"
requires-python = ">=3.12"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
no_implicit_optional = true
strict = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
