[project]
name = "retro-rl-milestones"
version = "0.1.0"
description = "Recreate RL milestones with MiniPong and DQN from pixels"
readme = "README.md"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Factory scripts get stricter rules — the validation system must be trustworthy
"scripts/run_scenarios.py" = []
"scripts/compile_feedback.py" = []
# Test files can use assert statements and longer lines
"tests/test_factory_*.py" = ["S101"]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
no_implicit_optional = true
strict = true
ignore_missing_imports = true
disable_error_code = ["type-arg", "misc", "override", "return-value", "no-any-return", "no-untyped-call"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]
